<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="114dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/selfie" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfcompactrounded"
        android:text="@string/contact"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="207dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autoLink="all"
        android:fontFamily="@font/sfcompactrounded"
        android:text="@string/contact_info"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="382dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sfcompactrounded"
        android:text="-"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/projectImageView"
        android:layout_width="350dp"
        android:layout_height="269dp"
        android:layout_marginTop="28dp"
        android:src="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="374dp"
        android:layout_height="109dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sfcompactrounded"
        android:text="-"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectImageView" />

    <Button
        android:id="@+id/backButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="@font/sfcompactrounded"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>